objects/zoom_app__Zoom_Call_Log__c.object
<CustomObject>
    <fields>
        <fullName>zoom_app__Answer_Start_Time__c</fullName>
        <label>Answer Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Call_Duration__c</fullName>
        <label>Call Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Call_End_Time__c</fullName>
        <label>Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Call_ID__c</fullName>
        <label>Call ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Call_Level_Type__c</fullName>
        <inlineHelpText>2:call queue, 3:auto receptionist</inlineHelpText>
        <label>Call Level Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Callee_Extension_Number__c</fullName>
        <label>Callee Extension Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zoom_app__Callee_Phone_Number__c</fullName>
        <label>Callee Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zoom_app__Caller_Extension_Number__c</fullName>
        <label>Caller Extension Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zoom_app__Caller_Phone_Number__c</fullName>
        <label>Caller Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zoom_app__Calllog_Status__c</fullName>
        <label>Calllog Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Calllog_Unique_ID__c</fullName>
        <label>Calllog Unique ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zoom_app__Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left a Voicemail</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__IsExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Ring_Start_Time__c</fullName>
        <label>Ring Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Signal_Status__c</fullName>
        <description>Signaling status fo the call</description>
        <inlineHelpText>1: ringing, 2:answered, 3:missed, 5: rejected , 9: end</inlineHelpText>
        <label>Signal Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Third_Party_Name__c</fullName>
        <label>Third Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Third_Party_Number__c</fullName>
        <label>Third Party Number</label>
        <type>Phone</type>
    </fields>
    <label>Zoom Call Log</label>
    <listViews>
        <fullName>zoom_app__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Zoom-CallLog-{0}</displayFormat>
        <label>Zoom Call Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>